# gitlab-manjaro-org-applications-mhwd

./: .gitignore  CMakeLists.txt  README.md
libmhwd/: CMakeLists.txt  Config.cpp  Config.hpp  Data.cpp  Data.hpp  Device.hpp  Enums.hpp
mhwd-bin/: Mhwd.hpp  Transaction.hpp
scripts/: mhwd-fb  mhwd-kernel
scripts/include/: 0300
scripts/initcpio/hooks/: mhwd-fb
src/: CMakeLists.txt  Config.hpp  ConsoleWriter.cpp  ConsoleWriter.hpp  Data.cpp  Data.hpp  Device.cpp  Device.hpp  Enums.hpp  Mhwd.cpp  Mhwd.hpp  Transaction.cpp  Transaction.hpp  Utils.hpp  main.cpp
